[workspace]
members = [
    "simple-wallet",
    "bip39-simple",
    "script-tx-decode",
    "redeem-script",
    "base58check", "block-constructor",
]
resolver = "2"


[workspace.dependencies]
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.8"
blake3 = "1.5.0"
bdk = "0.29.0"
rand_chacha = "0.3.1"
rand_core = { version = "0.6.4", features = ["getrandom"] }
sha2 = "0.10.8"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
bitcoin = { version = "0.31.1", features = ["std", "rand-std"] }
hex = "0.4.3"
hex-literal = "0.4.1"
ripemd = "0.1.3"
